apps/no-dns-test-2/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-dns-test-2
  namespace: dev
  labels:
    app: no-dns-test-2
    backstage.io/kubernetes-id: no-dns-test-2
    environment: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: no-dns-test-2
  template:
    metadata:
      labels:
        app: no-dns-test-2
        backstage.io/kubernetes-id: no-dns-test-2
        environment: dev
    spec:
      containers:
        - name: no-dns-test-2
          image: jaykumark7/no-dns-test-2:1.0.5
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "384Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "500m"
