apps/no-dns-test-2/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: no-dns-test-2
  namespace: dev
  labels:
    backstage.io/kubernetes-id: no-dns-test-2
spec:
  selector:
    app: no-dns-test-2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
